fix layout issues add horizontal scrolling if page is too small

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -52,10 +52,14 @@ body, h3, h4 {
 main {
     text-align: center;
     font-size: 16px;
-    max-width: 90%;
+    max-width: 95%;
     font-family: Arial, Helvetica, sans-serif;
 
     h1 {
         font-size: 1.875rem;
     }
+}
+
+.bord {
+    overflow-x: auto;
 }
